--- a/views/products.hbs
+++ b/views/products.hbs
@@ -8,7 +8,7 @@
     });
   </script>
 
-  <script src="js/products.js"></script>
+  <script src="js/expandables.js"></script>
 {{/section}}
 
 <!-- Heading and details -->
@@ -92,16 +92,16 @@
         <div class="col-md-4">
           <button class="d-none btn-hidden" data-expand="#game3">
             <div class="product-img-wrapper shadow">
-              <img src="https://via.placeholder.com/350x200/248.png/fff" class="product-img img-fluid" alt="Game1"/>
+              <img src="https://via.placeholder.com/350x200/248.png/fff" class="product-img img-fluid" alt="Game3"/>
             </div>
           </button>
         </div>
       </div>
     </div>
 
-    <div class="product-info-wrapper games-product-info mx-5" data-open="false">
+    <div class="expandable product-info-wrapper games-product-info mx-5" data-open="false">
       <div class="panel-controls">
-        <button class="float-right close-btn btn-hidden" data-expand-close=".product-info-wrapper">
+        <button class="float-right close-btn btn-hidden" data-expand-close="true">
           &times;
         </button>
       </div>
@@ -116,6 +116,56 @@
 
       <div id="game3" class="product-info">
         <p>Game 3</p>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="applications-cat">
+    <h1 class="display-5 text-center font-weight-light text-capitalize">Applications</h1>
+    <div class="container my-4">
+      <div class="row">
+        <div class="col-md-4">
+          <button class="btn-hidden" data-expand="#app1">
+            <div class="product-img-wrapper shadow">
+              <img src="https://via.placeholder.com/350x200/248.png/fff" class="product-img img-fluid" alt="App1"/>
+            </div>
+          </button>
+        </div>
+        <div class="col-md-4">
+          <button class="btn-hidden" data-expand="#app2">
+            <div class="product-img-wrapper shadow">
+              <img src="https://via.placeholder.com/350x200/248.png/fff" class="product-img img-fluid" alt="App2"/>
+            </div>
+          </button>
+        </div>
+        <div class="col-md-4">
+          <button class="btn-hidden" data-expand="#app3">
+            <div class="product-img-wrapper shadow">
+              <img src="https://via.placeholder.com/350x200/248.png/fff" class="product-img img-fluid" alt="App3"/>
+            </div>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="expandable product-info-wrapper games-product-info mx-5" data-open="false">
+      <div class="panel-controls">
+        <button class="float-right close-btn btn-hidden" data-expand-close="true">
+          &times;
+        </button>
+      </div>
+
+      <div id="app1" class="product-info">
+        <p>App #1</p>
+      </div>
+
+      <div id="app2" class="product-info">
+        <p>App #2</p>
+      </div>
+
+      <div id="app3" class="product-info">
+        <p>App #3</p>
       </div>
     </div>
   </div>
